--- a/CódigoFuente/BitacorasProduccion/Views/BG_IHS_combinacion/Enable.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_IHS_combinacion/Enable.cshtml
@@ -426,7 +426,7 @@
             })
 
             //input mask
-            $('.porcentaje').inputmask({ 'alias': 'integer', 'groupSeparator': ',', 'autoGroup': true, 'digits': 0, 'digitsOptional': false, 'suffix': ' %', 'allowMinus': false, 'placeholder': '0', 'autoUnmask': true, 'removeMaskOnSubmit': true });
+            $('.porcentaje').inputmask({ 'alias': 'decimal', 'groupSeparator': ',', 'autoGroup': true, 'digits': 2, 'digitsOptional': false, 'suffix': ' %', 'allowMinus': false, 'placeholder': '0', 'autoUnmask': true, 'removeMaskOnSubmit': true });
 
 
              //llamada al metodo para cargar las filas
