--- a/CódigoFuente/BitacorasProduccion/Views/BG_IHS_combinacion/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_IHS_combinacion/Index.cshtml
@@ -199,7 +199,7 @@
                                                         @Html.DisplayFor(modelItem => item.comentario)
                                                     </td>
                                                     <td>
-                                                        @Html.DisplayFor(modelItem => item.porcentaje_scrap)
+                                                        @($"{item.porcentaje_scrap_100:0.00} %")
                                                     </td>
                                                     <td>
                                                         @(item.activo?"Activo":"Inactivo")
