--- a/CódigoFuente/BitacorasProduccion/Views/BG_IHS_division/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_IHS_division/Details.cshtml
@@ -400,7 +400,7 @@
             calculaValores('@Bitacoras.Util.BG_IHS_tipo_demanda.CUSTOMER');
 
             //input mask
-            $('.porcentaje').inputmask({ 'alias': 'integer', 'groupSeparator': ',', 'autoGroup': true, 'digits': 0, 'digitsOptional': false, 'suffix': ' %', 'allowMinus': false, 'placeholder': '0', 'autoUnmask': true, 'removeMaskOnSubmit': true });
+            $('.porcentaje').inputmask({ 'alias': 'decimal', 'groupSeparator': ',', 'autoGroup': true, 'digits': 2, 'digitsOptional': false, 'suffix': ' %', 'allowMinus': false, 'placeholder': '0', 'autoUnmask': true, 'removeMaskOnSubmit': true });
 
 
         });
