--- a/CódigoFuente/BitacorasProduccion/Views/BG_IHS_division/Disable.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_IHS_division/Disable.cshtml
@@ -416,7 +416,7 @@
                 theme: 'bootstrap4'
             })
             //input mask
-            $('.porcentaje').inputmask({ 'alias': 'integer', 'groupSeparator': ',', 'autoGroup': true, 'digits': 0, 'digitsOptional': false, 'suffix': ' %', 'allowMinus': false, 'placeholder': '0', 'autoUnmask': true, 'removeMaskOnSubmit': true });
+            $('.porcentaje').inputmask({ 'alias': 'decimal', 'groupSeparator': ',', 'autoGroup': true, 'digits': 2, 'digitsOptional': false, 'suffix': ' %', 'allowMinus': false, 'placeholder': '0', 'autoUnmask': true, 'removeMaskOnSubmit': true });
 
 
             calculaValores('@Bitacoras.Util.BG_IHS_tipo_demanda.ORIGINAL');
