--- a/CódigoFuente/BitacorasProduccion/Views/BG_Forecast_reporte/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_Forecast_reporte/Create.cshtml
@@ -236,6 +236,9 @@
                                                         #
                                                     </th>
                                                     <th>
+                                                        @Html.DisplayNameFor(model => model.BG_Forecast_item.FirstOrDefault().mostrar_advertencia)
+                                                    </th>
+                                                   <th>
                                                         @Html.DisplayNameFor(model => model.BG_Forecast_item.FirstOrDefault().cat_1)
                                                     </th>
                                                     <th>
@@ -401,6 +404,9 @@
                                                             @(cont++)
                                                         </td>
                                                         <td>
+                                                            @Html.DisplayFor(modelItem => item.mostrar_advertencia)
+                                                        </td>
+                                                         <td>
                                                             @Html.DisplayFor(modelItem => item.cat_1)
                                                         </td>
                                                         <td>
