--- a/CódigoFuente/BitacorasProduccion/Views/BG_IHS_combinacion/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_IHS_combinacion/Create.cshtml
@@ -456,7 +456,7 @@
     <!-- input mask -->
     @Scripts.Render(Url.Content("~/Content/vendors/jquery.inputmask/dist/jquery.inputmask.bundle.js"))
 
-    <script>
+<script>
         $(document).ready(function () {
 
             // Initialize Select2 Elements (debe ir después de asignar el valor)
@@ -468,14 +468,20 @@
             CargaRow('@Bitacoras.Util.BG_IHS_tipo_demanda.ORIGINAL');
             CargaRow('@Bitacoras.Util.BG_IHS_tipo_demanda.CUSTOMER');
 
+
+            let typingTimer;
+            let doneTypingInterval = 1500; // 1.5 segundos
                 //llamada el método cuando se carga por primera vez
-            $('#@Html.IdFor(model => model.porcentaje_scrap_100)').on('input', function (e) {
-                CargaRow('@Bitacoras.Util.BG_IHS_tipo_demanda.ORIGINAL');
-                CargaRow('@Bitacoras.Util.BG_IHS_tipo_demanda.CUSTOMER');
-            });
+             $('#@Html.IdFor(model => model.porcentaje_scrap_100)').on('input', function () {
+                 clearTimeout(typingTimer); // Cancela el temporizador anterior
+                 typingTimer = setTimeout(function () {
+                     CargaRow('@Bitacoras.Util.BG_IHS_tipo_demanda.ORIGINAL');
+                     CargaRow('@Bitacoras.Util.BG_IHS_tipo_demanda.CUSTOMER');
+                 }, doneTypingInterval);
+             });
 
             //input mask
-            $('.porcentaje').inputmask({ 'alias': 'integer', 'groupSeparator': ',', 'autoGroup': true, 'digits': 0, 'digitsOptional': false, 'suffix': ' %', 'allowMinus': false, 'placeholder': '0', 'autoUnmask': true, 'removeMaskOnSubmit': true });
+            $('.porcentaje').inputmask({ 'alias': 'decimal', 'groupSeparator': ',', 'autoGroup': true, 'digits': 2, 'digitsOptional': false, 'suffix': ' %', 'allowMinus': false, 'placeholder': '0', 'autoUnmask': true, 'removeMaskOnSubmit': true });
 
             asignaEvents();
 
@@ -698,7 +704,7 @@
         window.onload = function () {
             //clicMenu(1);
         }
-    </script>
+</script>
 }
 
 
