--- a/CódigoFuente/BitacorasProduccion/Views/BG_IHS_division/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_IHS_division/Index.cshtml
@@ -170,7 +170,7 @@
                                                         @Html.DisplayFor(modelItem => item.BG_IHS_item.ConcatCodigo)
                                                     </td>
                                                     <td>
-                                                        @Html.DisplayFor(modelItem => item.porcentaje_scrap)
+                                                        @($"{item.porcentaje_scrap_100:0.00} %")
                                                     </td>
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.comentario)
