--- a/CódigoFuente/BitacorasProduccion/Views/BG_Forecast_reporte/EditarAsociacionIHS.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_Forecast_reporte/EditarAsociacionIHS.cshtml
@@ -145,6 +145,8 @@
                                                         <th>IHS Asociado</th>
                                                         <th>IHS Asociado (Tipo)</th>
                                                         <th>@Html.DisplayNameFor(model => model.FirstOrDefault().mostrar_advertencia)</th>
+                                                        <th>@Html.DisplayNameFor(model => model.FirstOrDefault().inicio_demanda)</th>
+                                                        <th>@Html.DisplayNameFor(model => model.FirstOrDefault().fin_demanda)</th>
                                                         <th>@Html.DisplayNameFor(model => model.FirstOrDefault().business_and_plant)</th>
                                                         <th>@Html.DisplayNameFor(model => model.FirstOrDefault().cat_2)</th>
                                                         <th>@Html.DisplayNameFor(model => model.FirstOrDefault().calculo_activo)</th>
@@ -192,6 +194,8 @@
                                                             <td id="descripcion_@index" style="font-weight:bold">@Html.DisplayFor(modelItem => item.ElementoIHS.descripcion)</td>
                                                             <td id="descripcion_tipo_@index">@Html.DisplayFor(modelItem => item.ElementoIHS.descripcionTipo)</td>
                                                             <td>@Html.DisplayFor(modelItem => item.mostrar_advertencia)</td>
+                                                            <td>@(item.inicio_demanda.HasValue ? item.inicio_demanda.Value.ToString("yyyy-MM") : "")</td>
+                                                            <td>@(item.fin_demanda.HasValue ? item.fin_demanda.Value.ToString("yyyy-MM") : "")</td>
                                                             <td>@Html.DisplayFor(modelItem => item.business_and_plant)</td>
                                                             <td>@Html.DisplayFor(modelItem => item.cat_2)</td>
                                                             <td>@Html.EditorFor(modelItem => Model[index].calculo_activo, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })</td>
@@ -337,28 +341,7 @@
                 fixedColumns: {
                     left: 4
                 },
-                columnDefs: [
-                    { width: 300, targets: 3 }, //business % plant
-                    { width: 550, targets: 4 }, //vehicle
-                    { width: 600, targets: 5 }, //IHS asociado
-                    { width: 200, targets: 6 },  //po in hand
-                    { width: 150, targets: 8 }, //sap invoice code
-                    { width: 400, targets: 9 }, //invoiced to
-                    { width: 400, targets: 11 }, //shipped to
-                    { width: 100, targets: 12 }, //cm/own
-                    { width: 200, targets: 13 }, //route
-                    { width: 100, targets: 14 }, //plant
-                    { width: 350, targets: 16 }, //mill
-                    { width: 150, targets: 17 }, //sap master coil
-                    { width: 450, targets: 18 }, //part description
-                    { width: 350, targets: 19 }, //part number
-                    { width: 200, targets: 20 }, //production line
-                    { width: 200, targets: 23 }, //material type
-                    { width: 100, targets: 24 }, //shape
-                    { width: 150, targets: 28 }, //ventas/part
-                    { width: 400, targets: 33 }, //freights income
-                    { width: 400, targets: 34 }, //outgoing freights
-                ],
+               
             });
 
 
